# dave

./: .gitignore  DOMAIN.md  OPERATIONS.md  PLAN.md  README.md  TODO.md  agent.py  dave.toml  install.sh  pyproject.toml  uninstall.sh
dave_agent/: __init__.py  __main__.py  agent.py  config.py  openai_client.py  stream_compactor.py  tui.py
dave_agent/tools/: read_file.py  registry.py
docs/: events.md
legacy/: README.md  TODO.md  agent.py
legacy/dave_agent/: __main__.py  openai_client.py  tui.py
legacy/dave_agent/tools/: list_files.py
src/dave/: cli.py
src/dave/core/: __init__.py  artifacts.py  event_log.py  events.py  messages.py  requests.py  session.py  stream_events.py
src/dave/providers/: client.py  fake.py  openai_compatible.py  stream_adapter.py
src/dave/runtime/: __init__.py  artifacts.py  branches.py  event_log.py  events.py  messages.py  requests.py  session.py  stream_events.py  tool_calls.py
src/dave/ui/textual/: __init__.py  app.py  presenter.py  theme.py  widgets.py
tests/: __init__.py  test_cli.py  test_openai_compatible_provider.py  test_session_flow.py  test_textual_app.py  test_textual_presenter.py  test_textual_widgets.py
tests/smoke/: openai_compatible.py  openai_compatible.toml  textual_ui.py  textual_ui.toml
