[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dave-agent"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1",
    "pydantic>=2",
]

[project.scripts]
dave = "dave.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
